Added controller mapping, an application service talking to the repository. Next it would be nice to connect the repository to mongodb and see it work.